update content for group

--- a/ETL-with-spark_2.ipynb
+++ b/ETL-with-spark_2.ipynb
@@ -2360,78 +2360,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2445d940cb5a47b9a8984f5bfdf2c797",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+--------+------------+------------+---------------+--------------------+---------------------+--------+------------+-------------+-----------+-------------+\n",
-      "|VendorID|PULocationID|DOLocationID|passenger_count|lpep_pickup_datetime|lpep_dropoff_datetime|duration|total_amount|trip_distance|minute_rate|average_speed|\n",
-      "+--------+------------+------------+---------------+--------------------+---------------------+--------+------------+-------------+-----------+-------------+\n",
-      "|       2|          97|          49|              2| 2019-01-01 00:10:16|  2019-01-01 00:16:32|     376|         7.3|          .86|     1.1649|        8.234|\n",
-      "|       2|          49|         189|              2| 2019-01-01 00:27:11|  2019-01-01 00:31:38|     267|         5.8|          .66|     1.3034|       8.8989|\n",
-      "|       2|         189|          17|              2| 2019-01-01 00:46:20|  2019-01-01 01:04:54|    1114|       19.71|         2.68|     1.0616|       8.6607|\n",
-      "|       2|          82|         258|              1| 2019-01-01 00:19:06|  2019-01-01 00:39:43|    1237|        19.3|         4.53|     0.9361|      13.1835|\n",
-      "|       2|          49|          17|              1| 2019-01-01 00:12:35|  2019-01-01 00:19:09|     394|         7.8|         1.05|     1.1878|       9.5939|\n",
-      "|       2|         255|          33|              1| 2019-01-01 00:47:55|  2019-01-01 01:00:01|     726|        14.8|         3.77|     1.2231|      18.6942|\n",
-      "|       1|          76|         225|              1| 2019-01-01 00:12:47|  2019-01-01 00:30:50|    1083|        17.3|         4.10|     0.9584|      13.6288|\n",
-      "|       2|          25|          89|              1| 2019-01-01 00:16:23|  2019-01-01 00:39:46|    1403|        26.8|         7.75|     1.1461|       19.886|\n",
-      "|       2|          85|          39|              1| 2019-01-01 00:58:02|  2019-01-01 01:19:02|    1260|        16.8|         3.68|        0.8|      10.5143|\n",
-      "|       2|         223|         238|              1| 2019-01-01 00:37:00|  2019-01-01 00:56:42|    1182|       37.06|         6.84|     1.8812|      20.8325|\n",
-      "+--------+------------+------------+---------------+--------------------+---------------------+--------+------------+-------------+-----------+-------------+\n",
-      "only showing top 10 rows"
-     ]
-    }
-   ],
-   "source": [
-    "df.select(['VendorID','PULocationID', 'DOLocationID', 'p_count', 'lpep_pickup_datetime', 'lpep_dropoff_datetime', 'duration','total_amount','trip_distance','minute_rate','average_speed']) \\\n",
-    ".show(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 42,
    "metadata": {},
    "outputs": [
@@ -2668,78 +2596,8 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "dfjoin1 = df.join(dfz, df['PULocationID'].eqNullSafe(dfz['LocationID']),'left') \\\n",
-    "            .withColumnRenamed('Borough','FromBorough').withColumnRenamed('Zone','FromZone') \\\n",
-    "            .drop('LocationID').drop('service_zone') \\\n",
-    "            .orderBy('count', ascending=False)\n",
-    "dfjoin1.show(10)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
     "# for business trend to \n",
     "Q1: Which zone have most pickups and drop-offs?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_pu = pd.read_sql_query('SELECT PULocationID AS LocationID, count(*) AS PUcount \\\n",
-    "                        FROM table_record \\\n",
-    "                        GROUP BY PULocationID', nyc_database)\n",
-    "df_do = pd.read_sql_query('SELECT DOLocationID AS LocationID, count(*) AS DOcount \\\n",
-    "                        FROM table_record \\\n",
-    "                        GROUP BY DOLocationID', nyc_database)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "456021fac0094bffa1ebc0fa9f78e633",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['VendorID', 'lpep_pickup_datetime', 'lpep_dropoff_datetime', 'RatecodeID', 'PULocationID', 'DOLocationID', 'p_count', 'trip_distance', 'fare_amount', 'extra', 'mta_tax', 'tip_amount', 'tolls_amount', 'improvement_surcharge', 'total_amount', 'payment_type', 'trip_type', 'duration', 'minute_rate', 'average_speed']"
-     ]
-    }
-   ],
-   "source": [
-    "df.columns"
    ]
   },
   {
@@ -2753,156 +2611,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b846cd380a6c480c884551e42f699564",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "## count().orderBy('count', ascending=False).limit(10)\n",
-    "\n",
-    "df_pu = df.select(f.col(\"PULocationID\").alias(\"LocationID\")).groupby('LocationID').count().withColumnRenamed('count', 'pu_count')\n",
-    "df_do = df.select(f.col(\"DOLocationID\").alias(\"LocationID\")).groupby('LocationID').count().withColumnRenamed('count', 'do_count')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "79e5cc73155d40ecbfc67c5f6071762c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+----------+--------+\n",
-      "|LocationID|pu_count|\n",
-      "+----------+--------+\n",
-      "|       125|      77|\n",
-      "|         7|  244131|\n",
-      "+----------+--------+\n",
-      "only showing top 2 rows"
-     ]
-    }
-   ],
-   "source": [
-    "df_pu.show(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fbeb2e45fb1b49f7a899e09ed140d2c1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+----------+--------+\n",
-      "|LocationID|do_count|\n",
-      "+----------+--------+\n",
-      "|       125|    3586|\n",
-      "|         7|  150145|\n",
-      "+----------+--------+\n",
-      "only showing top 2 rows"
-     ]
-    }
-   ],
-   "source": [
-    "df_do.show(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "118db57455564623a280efba40935efc",
+       "model_id": "b3e9f798bcb545dda11ddd8f1d095408",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2945,6 +2660,11 @@
     }
    ],
    "source": [
+    "## count().orderBy('count', ascending=False).limit(10)\n",
+    "\n",
+    "df_pu = df.select(f.col(\"PULocationID\").alias(\"LocationID\")).groupby('LocationID').count().withColumnRenamed('count', 'pu_count')\n",
+    "df_do = df.select(f.col(\"DOLocationID\").alias(\"LocationID\")).groupby('LocationID').count().withColumnRenamed('count', 'do_count')\n",
+    "\n",
     "## use taxi zone talbe\n",
     "joined1 = df_pu.join(df_do, 'LocationID', 'left').withColumn('total_count', df_pu.pu_count + df_do.do_count)\n",
     "\n",
@@ -2953,8 +2673,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 34,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a057b3507f8643f3b4152035b0c42cce",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+-------------+--------------------+------------+\n",
+      "|LocationID|      Borough|                Zone|service_zone|\n",
+      "+----------+-------------+--------------------+------------+\n",
+      "|         1|          EWR|      Newark Airport|         EWR|\n",
+      "|         2|       Queens|         Jamaica Bay|   Boro Zone|\n",
+      "|         3|        Bronx|Allerton/Pelham G...|   Boro Zone|\n",
+      "|         4|    Manhattan|       Alphabet City| Yellow Zone|\n",
+      "|         5|Staten Island|       Arden Heights|   Boro Zone|\n",
+      "+----------+-------------+--------------------+------------+\n",
+      "only showing top 5 rows"
+     ]
+    }
+   ],
+   "source": [
+    "dfz.show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -3007,13 +2787,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "21c2a560fb7b44ee9d9d0483cf4fe50e",
+       "model_id": "6f1bfd5177924284b6662c63b4969516",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3068,24 +2848,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_putp5 = joined2.select(['pu_count','zone','borough']).orderby('pu_count', ascending=False).limit(5)\n",
-    "\n",
-    "df_putp5.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "44ca0b37b401458fbe2c1a96ca025c58",
+       "model_id": "09cac9e2a77643fb83d139e18be302e1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3114,25 +2883,97 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----------+--------+--------+-----------+---------+--------------------+------------+\n",
-      "|LocationID|pu_count|do_count|total_count|  Borough|                Zone|service_zone|\n",
-      "+----------+--------+--------+-----------+---------+--------------------+------------+\n",
-      "|       125|      77|    3586|       3663|Manhattan|           Hudson Sq| Yellow Zone|\n",
-      "|       169|   10191|   14368|      24559|    Bronx|          Mount Hope|   Boro Zone|\n",
-      "|       205|   11476|   18682|      30158|   Queens|        Saint Albans|   Boro Zone|\n",
-      "|       132|     558|   29615|      30173|   Queens|         JFK Airport|    Airports|\n",
-      "|       154|     307|     844|       1151| Brooklyn|Marine Park/Floyd...|   Boro Zone|\n",
-      "|       101|    1701|    2358|       4059|   Queens|           Glen Oaks|   Boro Zone|\n",
-      "|        11|    3151|    3681|       6832| Brooklyn|          Bath Beach|   Boro Zone|\n",
-      "|        29|    7940|    7523|      15463| Brooklyn|      Brighton Beach|   Boro Zone|\n",
-      "|        69|   22308|   28900|      51208|    Bronx|East Concourse/Co...|   Boro Zone|\n",
-      "|        73|    1311|    4490|       5801|   Queens|       East Flushing|   Boro Zone|\n",
-      "+----------+--------+--------+-----------+---------+--------------------+------------+"
+      "+--------+--------+---------+-----------------+\n",
+      "|pu_count|do_count|  Borough|             Zone|\n",
+      "+--------+--------+---------+-----------------+\n",
+      "|  457848|  222492|Manhattan|East Harlem North|\n",
+      "|  368752|  159362|Manhattan|East Harlem South|\n",
+      "|  333623|  184460|Manhattan|   Central Harlem|\n",
+      "|  259303|   98800|   Queens|         Elmhurst|\n",
+      "|  244131|  150145|   Queens|          Astoria|\n",
+      "+--------+--------+---------+-----------------+"
      ]
     }
    ],
    "source": [
-    "joined2.select('*').limit(10).show(10)"
+    "# joined2.select('*').limit(10).show(10)\n",
+    "# joinedtemplate = joined2.createOrReplaceTempView(\"joinedtemplate\")\n",
+    "\n",
+    "df_putp5 = joined2.orderBy('pu_count', ascending=False).select(['pu_count','do_count','Borough','Zone']).limit(5)\n",
+    "\n",
+    "df_putp5.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3dba487a17aa420da18a616d164d599c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+--------+---------+--------------------+\n",
+      "|do_count|pu_count|  Borough|                Zone|\n",
+      "+--------+--------+---------+--------------------+\n",
+      "|  222492|  457848|Manhattan|   East Harlem North|\n",
+      "|  206448|  200203|Manhattan|Central Harlem North|\n",
+      "|  184460|  333623|Manhattan|      Central Harlem|\n",
+      "|  159362|  368752|Manhattan|   East Harlem South|\n",
+      "|  151820|  151117|   Queens|     Jackson Heights|\n",
+      "+--------+--------+---------+--------------------+"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "df_dotp5 = joined2.orderBy('do_count', ascending=False).select(['do_count','pu_count','Borough','Zone']).limit(5)\n",
+    "\n",
+    "df_dotp5.show()"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
+   "source": [
+    "## way 2\n",
+    "df_pu_agg = df.select(f.col(\"PULocationID\").alias(\"LocationID\")).groupBy('LocationID').agg({'LocationID':'count'}).withColumnRenamed('count(LocationID)', 'pu_count')\n",
+    "df_do_agg = df.select(f.col(\"DOLocationID\").alias(\"LocationID\")).groupBy('LocationID').agg({'LocationID':'count'}).withColumnRenamed('count(LocationID)', 'do_count')\n",
+    "# joinedg1 = df_pu_agg.join(df_do_agg, 'LocationID', 'left').withColumn('total_count', df_pu.pu_count + df_do.do_count)\n",
+    "# joinedg2 = joinedg1.join(dfz,'LocationID', 'left')\n",
+    "# joinedg2.show(10)"
    ]
   },
   {
